syntax = "proto3";

option csharp_namespace = "AuthManager.GRPC";

package AuthManager;

// The greeting service definition.
service Password {
  // Sends a greeting
  rpc Change (ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc Reset (ResetPasswordRequest) returns (ResetPasswordResponse);
  rpc Confirm (ConfirmPasswordRequest) returns (ConfirmPasswordResponse);
}

message ChangePasswordRequest {
  string oldPassword = 1;
  string newPassword = 2;
}
message ChangePasswordResponse {
}

message ResetPasswordRequest {
  string username = 1;
}
message ResetPasswordResponse {
}

message ConfirmPasswordRequest {
  string username = 1;
  string password = 2;
  string token = 3;
}
message ConfirmPasswordResponse {
}
